waha/050-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waha
  labels:
    app: waha
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waha
  template:
    metadata:
      labels:
        app: waha
    spec:
      containers:
        - name: waha
          image: devlikeapro/waha:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/data
          # -- only available in plus version
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: http
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: http
          #   initialDelaySeconds: 20
          #   periodSeconds: 20
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: waha-data
