waha/070-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waha
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: waha.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: waha
                port:
                  number: 3000
